feat: implementing update mechanism
