# src/main/duerre-manager/src/plugins/http/openapi.yaml
@@ -232,6 +232,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorWrapper'
+  /api/v1/updater-controller/update:
+    put:
+      tags:
+      - Updater Resource
+      operationId: update
+      responses:
+        "200":
+          description: OK
 components:
   schemas:
     CompleteDieSearchResult:
